[tool.poetry]
name = "annohdcell"
version = "0.1.0"
description = "Package for processing HD spatial transcriptomics data"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "annohdcell"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
scanpy = "^1.9.1"
anndata = "^0.8.0"
numpy = "^1.23.0"
matplotlib = "^3.6.0"
bin2cell = "^0.1.0"

[tool.poetry.scripts]
annohdcell = "annohdcell.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
